<resources>
    <string name="app_name">투유</string>
    <string name="app_name_debug">투유블랙</string>
    <string name="title_home">Home</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_diary">Diary</string>
    <string name="title_mypage">Mypage</string>

    <string name="ToYou_hanguel">투유</string>

    <string name="tutorial_step_1_title">투유는 맞춤형 질문과 친구들이 보낸 질문으로\n오늘의 일기카드를 만드는 서비스예요.</string>
    <string name="tutorial_step_1_subtitle">하루하루 그날의 감정을 기록할 수 있어요</string>
    <string name="tutorial_step_2_title">우체통에는 배달된 질문들이 기다리고 있어요\n질문들로 오늘의 일기카드를 만들 수 있답니다.</string>
    <string name="tutorial_step_2_subtitle">질문들은 24시가 지나면 사라지니 서두르세요!</string>
    <string name="tutorial_step_3_title">다양한 유형의 질문을 답하며\n나만의 일기카드를 완성해보세요.</string>
    <string name="tutorial_step_3_subtitle">물론 당신도 친구들에게 질문을 보낼 수 있답니다!</string>
    <string name="tutorial_step_4_title">기록탭에서 당신과 친구들의 일기카드를\n살펴보며 그날의 추억을 되새겨보세요.</string>
    <string name="tutorial_step_4_subtitle"> 작은 기록들이 모여 특별한 이야기가 완성됩니다</string>
    <string name="tutorial_step_5_title">투유와 함께 당신의 감정에 한 걸음 더\n가까이 다가가 특별한 경험을 만들어보세요!</string>
    <string name="tutorial_skip">건너뛰기</string>
    <string name="tutorial_complete">투유 시작하기</string>

    <string name="signup_screen_bar_title">회원가입</string>
    <string name="next_button">다음</string>
    <string name="complete_button">완료</string>

    <string name="login_title">당신을 만나는 매일의 질문</string>

    <string name="signup_agree_title">약관 동의</string>
    <string name="signup_agree_sub_title">투유와 함께하기 전\n필요한 약관들을 확인해주세요!</string>
    <string name="signup_agree_select_1">전체선택</string>
    <string name="signup_agree_select_2">만 14세 이상입니다</string>
    <string name="signup_agree_select_3">이용약관 동의</string>
    <string name="signup_agree_select_4">개인정보 수집 및 이용동의</string>
    <string name="signup_agree_select_5">마케팅 활용 / 광고성 정보 수신동의</string>
    <string name="signup_agree_essential">필수</string>
    <string name="signup_agree_choose">선택</string>

    <string name="signup_nickname_title">투유에서 사용할 닉네임을 알려주세요.</string>
    <string name="profile_nickname_title">수정할 닉네임을 알려주세요.</string>
    <string name="signup_nickname_placeholder">닉네임을 입력해주세요.</string>
    <string name="signup_nickname_message_default">중복된 닉네임인지 확인해주세요.</string>
    <string name="signup_nickname_message_confirm">사용 가능한 닉네임입니다.</string>
    <string name="signup_nickname_message_count">15자 이내로 입력해주세요.</string>
    <string name="signup_nickname_double_check">중복확인</string>

    <string name="signup_status_title">현재 상태를 알려주세요.</string>
    <string name="signup_status_subtitle">선택하신 정보를 기반으로 맞춤형 질문을 추천해드립니다. \n 다른 목적으로 사용되거나 제 3자에게 제공되지 않습니다.</string>
    <string name="signup_status_option_1">중·고등학생</string>
    <string name="signup_status_option_2">대학생</string>
    <string name="signup_status_option_3">직장인</string>
    <string name="signup_status_option_4">기타</string>

    <string name="notice">알림</string>
    <string name="notice_friend_request">%1$s님이 친구 요청을 보냈습니다.</string>
    <string name="notice_friend_request_accepted">%1$s님이 친구 요청을 수락했습니다.</string>
    <string name="notice_friend_request_btn">친구 수락</string>
    <string name="notice_card_check">%1$s님이 질문을 보냈습니다. 확인해보세요!</string>
    <string name="notice_friend_request_blank">새로운 친구 요청이 없어요</string>
    <string name="notice_entire_blank">새로운 알림이 없어요</string>

    <string name="home_stamp_title_1">오늘 하루는 어땠나요?</string>
    <string name="home_stamp_title_2">감정우표를 선택해주세요</string>
    <string name="home_stamp_subtitle">선택한 감정우표를 기반으로 맞춤형 질문이 배달됩니다</string>
    <string name="home_stamp_option_happy">더없이 행복한 하루였어요</string>
    <string name="home_stamp_option_exciting">들뜨고 흥분돼요</string>
    <string name="home_stamp_option_normal">평범한 하루였어요</string>
    <string name="home_stamp_option_anxiety">생각이 많아지고 불안해요</string>
    <string name="home_stamp_option_upset">부글부글 화가 나요</string>
    <string name="home_stamp_result_happy_1">너무 행복한 날이었나봐요! \n 이 소중한 순간을 꼭 기록해봐요</string>
    <string name="home_stamp_result_happy_2">오늘은 웃음이 많은 날이네요! \n 기분 좋은 순간을 함께 나눠봐요</string>
    <string name="home_stamp_result_happy_3">행복한 순간은 시간이 흘러도 기억에 남아요. \n 지금의 행복을 충분히 느껴보세요.</string>
    <string name="home_stamp_result_exciting_1">좋은 기분이네요! \n 이 기분을 느끼면서 즐겨보세요</string>
    <string name="home_stamp_result_exciting_2">흥분된 감정을 느끼는 것은 좋은 경험이에요. \n 그 감정을 즐겨보세요</string>
    <string name="home_stamp_result_exciting_3">흥분된 마음은 무한한 가능성을 느끼게 해줘요. \n 그 감정을 믿고 나아가보세요</string>
    <string name="home_stamp_result_normal_1">가끔은 아무 생각 없는 게 좋죠</string>
    <string name="home_stamp_result_normal_2">평범한 하루도 소중한 순간이에요. \n 그 순간을 함께 나눠봐요</string>
    <string name="home_stamp_result_normal_3">평범함이 존재하기에 특별함이 느껴져요. \n 일상의 아름다움을 발견해보세요</string>
    <string name="home_stamp_result_anxiety_1">그런 날도 있죠. \n 차근차근 풀어나갈 수 있을 거에요</string>
    <string name="home_stamp_result_anxiety_2">불안한 순간도 지나갈 거예요. \n 함께 그 감정을 이해하고 극복해봐요</string>
    <string name="home_stamp_result_anxiety_3">불안한 감정을 이겨내는 데는 시간이 필요해요. \n 하루하루 차분히 걸어가보세요</string>
    <string name="home_stamp_result_upset_1">화가 나는 날도 있죠. \n 함께 해결책을 찾아봐요</string>
    <string name="home_stamp_result_upset_2">화를 내는 것도 자연스러운 감정이에요. \n 함께 그 감정을 이해하고 해결책을 찾아봐요</string>
    <string name="home_stamp_result_upset_3">화가 난다는 것은 당신이 중요한 문제를 \n 마주했다는 증거에요. \n 함께 그 문제를 해결해나가봐요</string>

    <string name="home_date">20240503</string>
    <string name="home_bottom_sheet_title">따끈따끈한 친구들의 일기카드를 확인해보세요!</string>
    <string name="home_bottom_sheet_pseudo">아직 친구들이 일기카드를 \n 작성하지 않았어요</string>
    <string name="home_emotion_normal_title">평범한 하루였어요</string>
    <string name="home_emotion_upset_title">부글부글 화가 나요</string>
    <string name="home_emotion_anxiety_title">생각이 많아지고 불안해요</string>
    <string name="home_emotion_happy_title">더없이 행복한 하루였어요</string>
    <string name="home_emotion_exciting_title">들뜨고 흥분돼요</string>

    <string name="calendar_my_record">나의 기록</string>
    <string name="calendar_friend_record">친구 기록</string>
    <string name="calendar_my_record_date">20240501 나의 기록</string>
    <string name="calendar_friend_record_date">20240501 친구 기록</string>

    <string name="mypage_title">마이페이지</string>
    <string name="mypage_nickname">테디</string>
    <string name="mypage_friend_count">친구 n명</string>
    <string name="mypage_notice_setting">알림 설정</string>
    <string name="mypage_opinion">의견 보내기</string>
    <string name="mypage_contact">문의하기</string>
    <string name="mypage_terms_of_use">약관 및 정책</string>
    <string name="mypage_version">서비스 버전</string>
    <string name="mypage_version_name">1.0.10</string>
    <string name="mypage_logout">로그아웃</string>
    <string name="mypage_signout">회원탈퇴</string>
    <string name="home_emotion_tv">멘트</string>

</resources>