<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_paper">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_back_v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="19dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_next_v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_screen_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="47dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_title_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="136dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_next_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="662dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:src="@drawable/back_button"
        app:layout_constraintStart_toStartOf="@id/guideline_back_v"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/screen_bar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:fontFamily="@font/scdream5"
        android:text="@string/signup_screen_bar_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/guideline_screen_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/seperator_screen_bar"
        android:layout_width="420dp"
        android:layout_height="2dp"
        android:background="@color/g00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_screen_bar" />

    <TextView
        android:id="@+id/signup_status_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_status_title"
        android:textColor="@color/black"
        style="@style/sc_r18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_title_h" />

    <TextView
        android:id="@+id/signup_status_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_status_subtitle"
        android:textColor="@color/bl02"
        style="@style/sc_l10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_status_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_status_option_1"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:background="@drawable/signupnickname_input"
        android:text="@string/signup_status_option_1"
        style="@style/sc_l10"
        android:layout_marginTop="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_status_subtitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_status_option_2"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:background="@drawable/signupnickname_input"
        android:text="@string/signup_status_option_2"
        style="@style/sc_l10"
        android:layout_marginTop="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_status_option_1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_status_option_3"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:background="@drawable/signupnickname_input"
        android:text="@string/signup_status_option_3"
        style="@style/sc_l10"
        android:layout_marginTop="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_status_option_2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_status_option_4"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:background="@drawable/signupnickname_input"
        android:text="@string/signup_status_option_4"
        style="@style/sc_l10"
        android:layout_marginTop="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_status_option_3" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:background="@drawable/next_button"
        android:text="@string/complete_button"
        android:textColor="@color/bl01"
        style="@style/sc_m13"
        app:layout_constraintStart_toStartOf="@id/guideline_next_v"
        app:layout_constraintTop_toTopOf="@id/guideline_next_h" />



</androidx.constraintlayout.widget.ConstraintLayout>