<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.toyou.toyouandroid.presentation.fragment.emotionstamp.HomeOptionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_white">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_title_v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_title_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="125dp" />

        <TextView
            android:id="@+id/home_stamp_title_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_stamp_title_1"
            android:textColor="@color/black"
            style="@style/gangwon30"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline_title_h" />

        <LinearLayout
            android:id="@+id/home_option_back_layout"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="@+id/guideline_title_v"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/home_option_back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:src="@drawable/back_button" />

        </LinearLayout>

        <TextView
            android:id="@+id/home_stamp_title_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_stamp_title_2"
            android:textColor="@color/black"
            style="@style/gangwon22"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_stamp_title_1" />

        <TextView
            android:id="@+id/home_stamp_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_stamp_subtitle"
            android:textColor="@color/black"
            style="@style/sc_l8"
            android:layout_marginTop="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_stamp_title_2" />

        <ImageView
            android:id="@+id/home_stamp_option_happy_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/home_stamp_option_happy"
            android:layout_marginTop="27dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_stamp_subtitle" />

        <TextView
            android:id="@+id/home_stamp_option_happy_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/gangwon18"
            android:text="@string/home_stamp_option_happy"
            android:textColor="@color/black"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_stamp_option_happy_iv" />

        <ImageView
            android:id="@+id/home_stamp_option_exciting_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/home_stamp_option_exciting"
            android:layout_marginTop="19dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_stamp_option_happy_tv" />

        <TextView
            android:id="@+id/home_stamp_option_exciting_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/gangwon18"
            android:text="@string/home_stamp_option_exciting"
            android:textColor="@color/black"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_stamp_option_exciting_iv" />

        <ImageView
            android:id="@+id/home_stamp_option_normal_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/home_stamp_option_normal"
            android:layout_marginTop="19dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_stamp_option_exciting_tv" />

        <TextView
            android:id="@+id/home_stamp_option_normal_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/gangwon18"
            android:text="@string/home_stamp_option_normal"
            android:textColor="@color/black"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_stamp_option_normal_iv" />

        <ImageView
            android:id="@+id/home_stamp_option_anxiety_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/home_stamp_option_anxiety"
            android:layout_marginTop="19dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_stamp_option_normal_tv" />

        <TextView
            android:id="@+id/home_stamp_option_anxiety_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/gangwon18"
            android:text="@string/home_stamp_option_anxiety"
            android:textColor="@color/black"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_stamp_option_anxiety_iv" />

        <ImageView
            android:id="@+id/home_stamp_option_upset_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/home_stamp_option_upset"
            android:layout_marginTop="19dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_stamp_option_anxiety_tv" />

        <TextView
            android:id="@+id/home_stamp_option_upset_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/gangwon18"
            android:text="@string/home_stamp_option_upset"
            android:textColor="@color/black"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_stamp_option_upset_iv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>