<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_paper">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_title_v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="19dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_next_v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_agree_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="41dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_screen_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="47dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_title_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="136dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_next_h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="662dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:src="@drawable/back_button"
        app:layout_constraintStart_toStartOf="@id/guideline_title_v"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/screen_bar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:fontFamily="@font/scdream5"
        android:text="@string/signup_screen_bar_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/guideline_screen_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/seperator_screen_bar"
        android:layout_width="420dp"
        android:layout_height="2dp"
        android:background="@color/g00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_screen_bar" />

    <TextView
        android:id="@+id/signup_agree_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/scdream5"
        android:text="@string/signup_agree_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline_title_v"
        app:layout_constraintTop_toTopOf="@id/guideline_title_h" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/scdream4"
        android:text="@string/signup_agree_sub_title"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/guideline_title_v"
        app:layout_constraintTop_toBottomOf="@id/signup_agree_title" />

    <ImageView
        android:id="@+id/checkbox_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:src="@drawable/checkbox_uncheck"
        app:layout_constraintStart_toStartOf="@id/guideline_title_v"
        app:layout_constraintTop_toBottomOf="@id/signup_agree_title" />

    <TextView
        android:id="@+id/signup_agree_select_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        android:fontFamily="@font/scdream5"
        android:text="@string/signup_agree_select_1"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/guideline_agree_select"
        app:layout_constraintTop_toBottomOf="@id/signup_agree_title" />

    <View
        android:id="@+id/seperator_agree"
        android:layout_width="420dp"
        android:layout_height="2dp"
        android:layout_marginTop="11dp"
        android:background="@color/g00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_agree_select_1" />

    <ImageView
        android:id="@+id/checkbox_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:src="@drawable/checkbox_uncheck"
        app:layout_constraintStart_toStartOf="@id/guideline_title_v"
        app:layout_constraintTop_toBottomOf="@id/seperator_agree" />

    <TextView
        android:id="@+id/signup_agree_select_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/scdream4"
        android:text="@string/signup_agree_select_2"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/guideline_agree_select"
        app:layout_constraintTop_toBottomOf="@id/seperator_agree" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_agree_details_2"
        android:layout_width="33dp"
        android:layout_height="17dp"
        android:text="@string/signup_agree_essential"
        android:textColor="@color/white"
        android:textSize="11sp"
        android:background="@drawable/signupagree_essential"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@+id/signup_agree_select_2"
        app:layout_constraintTop_toTopOf="@+id/signup_agree_select_2" />


    <ImageView
        android:id="@+id/checkbox_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:src="@drawable/checkbox_uncheck"
        app:layout_constraintStart_toStartOf="@id/guideline_title_v"
        app:layout_constraintTop_toBottomOf="@id/checkbox_2" />

    <TextView
        android:id="@+id/signup_agree_select_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/scdream4"
        android:text="@string/signup_agree_select_3"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/guideline_agree_select"
        app:layout_constraintTop_toBottomOf="@id/signup_agree_select_2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_agree_details_3"
        android:layout_width="33dp"
        android:layout_height="17dp"
        android:text="@string/signup_agree_essential"
        android:textColor="@color/white"
        android:textSize="11sp"
        android:background="@drawable/signupagree_essential"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@+id/signup_agree_select_3"
        app:layout_constraintTop_toTopOf="@+id/signup_agree_select_3" />

    <ImageView
        android:id="@+id/signup_agree_arrow_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/signupagree_arrow"
        app:layout_constraintStart_toEndOf="@+id/signup_agree_details_3"
        app:layout_constraintTop_toTopOf="@+id/signup_agree_select_3" />

    <ImageView
        android:id="@+id/checkbox_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:src="@drawable/checkbox_uncheck"
        app:layout_constraintStart_toStartOf="@id/guideline_title_v"
        app:layout_constraintTop_toBottomOf="@id/checkbox_3" />

    <TextView
        android:id="@+id/signup_agree_select_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/scdream4"
        android:text="@string/signup_agree_select_4"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/guideline_agree_select"
        app:layout_constraintTop_toBottomOf="@id/signup_agree_select_3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_agree_details_4"
        android:layout_width="33dp"
        android:layout_height="17dp"
        android:text="@string/signup_agree_essential"
        android:textColor="@color/white"
        android:textSize="11sp"
        android:background="@drawable/signupagree_essential"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@+id/signup_agree_select_4"
        app:layout_constraintTop_toTopOf="@+id/signup_agree_select_4" />

    <ImageView
        android:id="@+id/signup_agree_arrow_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/signupagree_arrow"
        app:layout_constraintStart_toEndOf="@+id/signup_agree_details_4"
        app:layout_constraintTop_toTopOf="@+id/signup_agree_select_4" />

    <ImageView
        android:id="@+id/checkbox_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:src="@drawable/checkbox_uncheck"
        app:layout_constraintStart_toStartOf="@id/guideline_title_v"
        app:layout_constraintTop_toBottomOf="@id/checkbox_4" />

    <TextView
        android:id="@+id/signup_agree_select_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/scdream4"
        android:text="@string/signup_agree_select_5"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/guideline_agree_select"
        app:layout_constraintTop_toBottomOf="@id/signup_agree_select_4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_agree_details_5"
        android:layout_width="33dp"
        android:layout_height="17dp"
        android:text="@string/signup_agree_choose"
        android:textColor="@color/r01"
        android:textSize="11sp"
        android:background="@drawable/signupagree_choose"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@+id/signup_agree_select_5"
        app:layout_constraintTop_toTopOf="@+id/signup_agree_select_5" />

    <ImageView
        android:id="@+id/signup_agree_arrow_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/signupagree_arrow"
        app:layout_constraintStart_toEndOf="@+id/signup_agree_details_5"
        app:layout_constraintTop_toTopOf="@+id/signup_agree_select_5" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:background="@drawable/next_button"
        android:text="@string/next_button"
        app:layout_constraintStart_toStartOf="@id/guideline_next_v"
        app:layout_constraintTop_toTopOf="@id/guideline_next_h" />


</androidx.constraintlayout.widget.ConstraintLayout>